# knowledge-base-mcp

./: .replit  index_local_files.py  mcp_server.py  pyproject.toml  reindex_productfruits_kb.py  replit.md
docs/: desktop.ini
