[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "fastmcp>=2.13.3",
    "openai>=2.9.0",
    "pinecone>=8.0.0",
    "pinecone-client>=6.0.0",
    "requests>=2.32.5",
    "tldextract>=5.3.0",
]
